<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_MarkView" Id="{7d8b4156-6672-4ee0-bf84-ba2796b550c5}">
    <Declaration><![CDATA[TYPE ST_MarkView :
STRUCT
  bShow : BOOL;
  nXPosPx : DINT;  // position x of mark on sheet (view)
  nYPosPx : DINT;  // position y of mark on sheet (view)
  colorFill   : UDINT := 16#FFFFFFFF;  // Normal fill color
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>